traefik/default-endpoint.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
    backend:
        serviceName: stilton
        servicePort: 80
